# platzi-downloader

./: .gitignore  CHANGELOG.md  LICENCE  README.md  downloader.py  platzi.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
src/platzi/: __init__.py  async_api.py  cache.py  cli.py  collectors.py  constants.py  helpers.py  logger.py  m3u8.py  models.py  utils.py
src/tests/: test_utils.py
