[tool.poetry]
name = "platzi"
version = "0.1.0"
description = "Download your courses from platzi"
authors = ["ivansaul <ivansaul@no-reply.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ivansaul/platzi-downloader"
repository = "https://github.com/ivansaul/platzi-downloader"
keywords = ["Platzi", "downloader", "courses"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

packages = [
    { include = "platzi", from = "src" }
]

[tool.poetry.scripts]
platzi = "platzi.cli:app"

[tool.poetry.dependencies]
python = ">=3.10.0"

typer = "^0.13.0"
pydantic = "^2.9.2"
pyhumps = "^3.8.0"
aiohttp = "^3.11.2"
tqdm = "^4.67.0"
rebrowser-playwright = "^1.48.100"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
preview = true
select = ['E', 'F', 'W', 'I']
ignore = ["E501"]
